--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         </title>
     </head>
     <body>
-      <img src="383692522_983232459600469_6967644234125480508_n"/>
+      <center>
+          <img src="383692522_983232459600469_6967644234125480508_n"/>
+      </center>
       My Pacharapol
     </body>
 </html>
