--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
       <center>
-          <img src="383692522_983232459600469_6967644234125480508_n"/>
+          <img src="bank.jpg"/>
       </center>
     </body>
 </html>
