--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
       <center>
-          <img src="bank.jpg"/>
+          <img src="bank.jpg"/><br>
       </center>
     </body>
 </html>
