--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     <body>
       <center>
-          <img src="bank.jpg"/><br>
-          <h1>#Who am I </h1>
+          <img src="bank.jpg"/>
+          <h1>#Who am I </h1><br>
       </center>
     </body>
 </html>
