--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
       <center>
-          <img src="bank.jpg"/>
+          <img src="bank.jpg" width = 300/>
           <h1>#Who am I </h1><br>
       </center>
     </body>
