--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     <body>
       <center>
-          <img src="bank.jpg" width = 200/>  
-          <h1>#Who am I </h1><br>
-      </center>
+          <img src="bank.jpg" width = 200/>       
+      </center>    
+      <h1><fornt size = "3">#Who Am I </h1><br>
     </body>
 </html>
