--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
       <center>
           <img src="bank.jpg" width = 200/>       
       </center>    
-      <h1><besefornt size = "1"> #Who Am I </fornt></h1><br>
+      <p><small><strong> #Who Am I </strong></small></p><br>
     </body>
 </html>
