--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
       <center>
           <img src="bank.jpg" width = 200/>       
       </center>    
-      <p><small><strong> #Who Am I </strong></small></p><br>
-      <br>
+      <p><small><strong> #Who Am I </strong></small></p>
       <ul>
-       <p><li><small><strong> Name </strong></small></li></p> 
-      </ul>    
+       <p><li><small><b> Name : </b> Pacharapol Mooheng</small></li></p>
+       <p><li><small><b> ชื่อสกุล : </b> พัชรพล หมู่เฮง</small></li></p>
+       <p><li><small> ชื่อ<u>เล่น</u> : <b>แบงค์</b>  </small></li></p>
+       </ul> 
     </body>
 </html>
