--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <ul>
        <p><li><small><b> Name : </b> Pacharapol Mooheng</small></li></p>
        <p><li><small><b> ชื่อสกุล : </b> พัชรพล หมู่เฮง</small></li></p>
-       <p><li><small> ชื่อ<u>เล่น</u> : <b>แบงค์</b>  </small></li></p>
+       <p><li><small> ชื่อ<u>เล่น</u> : <i><b>แบงค์</b></i>  </small></li></p>
        </ul> 
     </body>
 </html>
