--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
       <center>
-          <img src="pictures" width = 250/>       
+          <img src="pictures/bank.jpg" width = 250/>       
       </center>    
       <p><small><strong> #Who Am I </strong></small></p>
       <ul>
